# wavelength

./: LICENSE  README.md  cloudbuild.yaml  render.yaml
apps/desktop/: .gitignore  .prettierrc  bun.lockb  package.json  svelte.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio_server.rs  cache.rs  download.rs  lib.rs  main.rs  stream_downloader.rs  youtube.rs
apps/mobile/: .env.example  .gitignore  pubspec.yaml
apps/mobile/rust/: Cargo.toml
mobile/: .env.example  .gitignore  analysis_options.yaml  flutter_launcher_icons.yaml  flutter_native_splash.yaml  pubspec.yaml
mobile/lib/: app_shell.dart  cache.dart  constants.dart  main.dart  root.dart  router.dart
mobile/rust/: Cargo.toml
mobile/rust_builder/: pubspec.yaml
server/: .air.toml  .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  gdeploy.sh  go.mod  go.sum  main.go  render.yaml
server/api/: youtube.go
server/constants/: formats.go  github.go  keys.go  locale.go  urls.go
server/env/: cors_origin.go  db_url.go  geoip_mmdb_path.go  init.go  jwt_secret.go  lyrics_rapid_api_keys.go  port.go  rapid_api.go  static_dir.go  upload_thing_key.go  youtube_key.go  yt_cookie_path.go  yt_dlp_path.go  yt_dlp_server_url.go
server/logging/: logger.go
server/middleware/: jwt_auth.go  log.go
server/models/: album.go  application_diagnostic.go  artist.go  artist_extra.go  auth_user.go  followed_artist.go  geoip_data.go  github_required_response.go  hls_stream.go  liked_track.go  music_track_stats.go  music_video_preview_id.go  playback_range.go  playlist_track.go  search_recommendations.go  theme_color.go  upload_thing.go  youtube_stream.go
server/proto/: album.proto  artist.proto  auth.proto  common.proto  image.proto  music.proto  playlist.proto  yt_scraper.proto
server/routes/: album.go  artists.go  auth.go  diagnostics.go  images.go  meta.go  music.go  playlists.go  region.go  register.go  streams.go  upload_thing.go
server/utils/: cookies.go  parse.go  thumbnail.go  youtube.go
server/validation/: follow_artist_validator.go  playlist_track_addition_validator.go
web/: .env.example  bun.lockb  drizzle.config.ts  eslint.config.js  package.json  svelte.config.js  tailwind.config.ts  vercel.json  vite.config.ts
web/drizzle/: 0000_stale_gideon.sql  0001_elite_crusher_hogan.sql  0002_material_lord_hawal.sql  0003_big_sally_floyd.sql  0004_hot_angel.sql  0005_white_puck.sql  0006_public_rogue.sql  0007_romantic_hitman.sql  0008_friendly_thunderbolts.sql  0009_steady_gorgon.sql  0010_gray_colonel_america.sql  0011_wise_scourge.sql  0012_numerous_white_tiger.sql  0013_pretty_maelstrom.sql  0014_rare_titanium_man.sql  0015_graceful_ironclad.sql
web/src/: app.css  app.html  auth.ts  hooks.server.ts  server-worker.ts  service-worker.ts
(+1121 files in other folders)
