[package]
name = "wavelength"
version = "0.1.0"
description = "Call this a glorified YouTube Music wrapper."
authors = ["Dev-Siri"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wavelength_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tydle = "0.1.14"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["stream"] }
anyhow = "1.0.100"
base64 = "0.22.1"
dashmap = "6.1.0"
axum = "0.8.4"
tower-http = { version = "0.6.8", features = ["cors"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
num_cpus = "1.17.0"
tokio-util = "0.7.18"

[profile.release]
# Copied from the docs: https://v2.tauri.app/concept/size
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
